bf857b71546298de99fa25d57c21be41055f90c2: Make RSS feed auto discoverable

--- a/404.html
+++ b/404.html
@@ -8,6 +8,7 @@
   <meta name="viewport" content="width=device-width">
   <meta name="description" content="">
   <link rel="canonical" href="/404.html">
+  <link rel="alternate" type="application/rss+xml" href="feed.xml">
   
     <meta http-equiv="refresh" content="3; url=/">
   
