90711d715fb27b9e8adc83f3347dccbf32ba85fb: Update RSS urls

--- a/404.html
+++ b/404.html
@@ -7,8 +7,8 @@
   <title>404</title>
   <meta name="viewport" content="width=device-width">
   <meta name="description" content="">
-  <link rel="canonical" href="/404.html">
-  <link rel="alternate" type="application/rss+xml" href="feed.xml">
+  <link rel="canonical" href="http://inlehmansterms.net/404.html">
+  <link rel="alternate" type="application/rss+xml" href="http://inlehmansterms.net/feed.xml">
   
     <meta http-equiv="refresh" content="3; url=/">
   
