--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <title>In Lehman's Terms</title>
   <meta name="viewport" content="width=device-width">
   <meta name="description" content="">
-  <link rel="canonical" href="/">
-  <link rel="alternate" type="application/rss+xml" href="feed.xml">
+  <link rel="canonical" href="http://inlehmansterms.net/">
+  <link rel="alternate" type="application/rss+xml" href="http://inlehmansterms.net/feed.xml">
   
   <!-- Fonts -->
   <link href='http://fonts.googleapis.com/css?family=Raleway|Abril+Fatface|Source+Code+Pro|Lustria|Quattrocento+Sans' rel='stylesheet' type='text/css'>
