--- a/404.html
+++ b/404.html
@@ -7,8 +7,8 @@
   <title>404</title>
   <meta name="viewport" content="width=device-width">
   <meta name="description" content="">
-  <link rel="canonical" href="http://inlehmansterms.net/404.html">
-  <link rel="alternate" type="application/rss+xml" href="http://inlehmansterms.net/feed.xml">
+  <link rel="canonical" href="http://localhost:4000/404.html">
+  <link rel="alternate" type="application/rss+xml" href="http://localhost:4000/feed.xml">
   
     <meta http-equiv="refresh" content="3; url=/">
   
@@ -16,18 +16,8 @@
   <link href='http://fonts.googleapis.com/css?family=Raleway|Abril+Fatface|Source+Code+Pro|Lustria|Quattrocento+Sans' rel='stylesheet' type='text/css'>
 
   <!-- Custom CSS -->
-  <link rel="stylesheet" href="/assets/app-07f808cdc7f34d3339ce81ced6b6d3ab.css">
+  <link rel="stylesheet" href="/assets/app.css">
   
-  <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-    ga('create', 'UA-53645628-1', 'auto');
-    ga('send', 'pageview');
-  </script>
-
 
 </head>
 
@@ -49,7 +39,8 @@
 </header>
 
 
-    <div class="Page">
+    <div class="Site-content">
+      <div class="Page">
 
   <header class="Page-header">
     <h1>404</h1>
@@ -62,6 +53,7 @@
 
 </div>
 
+    </div>
 
     <footer class="Site-footer">
     <h2>In Lehman's Terms</h2>
