--- a/index.html
+++ b/index.html
@@ -7,25 +7,15 @@
   <title>In Lehman's Terms</title>
   <meta name="viewport" content="width=device-width">
   <meta name="description" content="">
-  <link rel="canonical" href="http://inlehmansterms.net/">
-  <link rel="alternate" type="application/rss+xml" href="http://inlehmansterms.net/feed.xml">
+  <link rel="canonical" href="http://localhost:4000/">
+  <link rel="alternate" type="application/rss+xml" href="http://localhost:4000/feed.xml">
   
   <!-- Fonts -->
   <link href='http://fonts.googleapis.com/css?family=Raleway|Abril+Fatface|Source+Code+Pro|Lustria|Quattrocento+Sans' rel='stylesheet' type='text/css'>
 
   <!-- Custom CSS -->
-  <link rel="stylesheet" href="/assets/app-07f808cdc7f34d3339ce81ced6b6d3ab.css">
+  <link rel="stylesheet" href="/assets/app.css">
   
-  <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-    ga('create', 'UA-53645628-1', 'auto');
-    ga('send', 'pageview');
-  </script>
-
 
 </head>
 
@@ -47,7 +37,8 @@
 </header>
 
 
-    <article class="Home">
+    <div class="Site-content">
+      <article class="Home">
 
   <h1>Posts</h1>
 
@@ -92,6 +83,7 @@
 
 </article>
 
+    </div>
 
     <footer class="Site-footer">
     <h2>In Lehman's Terms</h2>
