--- a/404.html
+++ b/404.html
@@ -7,8 +7,8 @@
   <title>404</title>
   <meta name="viewport" content="width=device-width">
   <meta name="description" content="">
-  <link rel="canonical" href="http://localhost:4000/404.html">
-  <link rel="alternate" type="application/rss+xml" href="http://localhost:4000/feed.xml">
+  <link rel="canonical" href="http://inlehmansterms.net/404.html">
+  <link rel="alternate" type="application/rss+xml" href="http://inlehmansterms.net/feed.xml">
   
     <meta http-equiv="refresh" content="3; url=/">
   
@@ -16,8 +16,18 @@
   <link href='http://fonts.googleapis.com/css?family=Raleway|Abril+Fatface|Source+Code+Pro|Lustria|Quattrocento+Sans' rel='stylesheet' type='text/css'>
 
   <!-- Custom CSS -->
-  <link rel="stylesheet" href="/assets/app.css">
+  <link rel="stylesheet" href="/assets/app-9848f9826e347615143fe732255dcf2e.css">
   
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-53645628-1', 'auto');
+    ga('send', 'pageview');
+  </script>
+
 
 </head>
 
