--- a/page2/index.html
+++ b/page2/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>In Lehman's Terms</title>
-  <meta name="viewport" content="width=device-width">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="">
   <link rel="canonical" href="http://inlehmansterms.net/page2/">
   <link rel="alternate" type="application/rss+xml" href="http://inlehmansterms.net/feed.xml">
