Make use of tags
- Creating tags listing, with all tags and count
- Dynamically create page for eacht tag with post listings
- Add tags to top of each post

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@ layout: default
 
 <article class="Home">
 
-  <article class="PostContainer">
+  <article class="Listings">
     {% assign current_date = site.time | date: '%s' %}
     {% for post in paginator.posts %}
       {% assign post_date = post.date | date: '%s' %}
       {% if post_date <= current_date %}
-        <section class="PostItem">
+        <section class="Listing">
           {% include excerpt.html %}
         </section>
       {% endif %}
