4f5d8ef0446246fc1c1576a296005b0e7f3bdc2c: Add more meta information in head
Help SEO

--- a/page2/index.html
+++ b/page2/index.html
@@ -6,10 +6,23 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>In Lehman's Terms</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="The technical blog of Jonathan Lehman.">
   <link rel="canonical" href="http://inlehmansterms.net/page2/">
   <link rel="alternate" type="application/rss+xml" href="http://inlehmansterms.net/feed.xml">
+  <meta name="robots" content="INDEX,FOLLOW">
+
   
+
+  
+    <meta name="description" content="The technical blog of Jonathan Lehman.">
+  
+
+  
+    
+    <meta name="keywords" content="CSS,Database,Rails,Ruby,Sass,Typography,Varnish,Vim">
+  
+
+  
+
   <!-- Custom CSS -->
   <link rel="stylesheet" href="/assets/app-aeb02feeb67d9ab2127c2232439b2996.css">
 </head>
