--- a/404.html
+++ b/404.html
@@ -6,12 +6,25 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>In Lehman's Terms - 404</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="The technical blog of Jonathan Lehman.">
   <link rel="canonical" href="http://inlehmansterms.net/404.html">
   <link rel="alternate" type="application/rss+xml" href="http://inlehmansterms.net/feed.xml">
+  <meta name="robots" content="INDEX,FOLLOW">
+
   
     <meta http-equiv="refresh" content="3; url=/">
   
+
+  
+    <meta name="description" content="The technical blog of Jonathan Lehman.">
+  
+
+  
+    
+    <meta name="keywords" content="CSS,Database,Rails,Ruby,Sass,Typography,Varnish,Vim">
+  
+
+  
+
   <!-- Custom CSS -->
   <link rel="stylesheet" href="/assets/app-aeb02feeb67d9ab2127c2232439b2996.css">
 </head>
