3b3bfe5893834a46d5920eb6da9b6c69c4d4145e: Publish responsive tables post

--- a/404.html
+++ b/404.html
@@ -20,13 +20,13 @@
 
   
     
-    <meta name="keywords" content="CSS,Database,Rails,Ruby,Sass,Typography,Varnish,Vim">
+    <meta name="keywords" content="CSS,Database,Rails,Ruby,Sass,Typography,Varnish,Vim,HTML">
   
 
   
 
   <!-- Custom CSS -->
-  <link rel="stylesheet" href="/assets/app-aeb02feeb67d9ab2127c2232439b2996.css">
+  <link rel="stylesheet" href="/assets/app-8379ad779081a57bfe119a9994f69253.css">
 </head>
 
 
