--- a/404.html
+++ b/404.html
@@ -20,13 +20,13 @@
 
   
     
-    <meta name="keywords" content="CSS,Database,Rails,Ruby,Sass,Typography,Varnish,Vim,HTML,Git">
+    <meta name="keywords" content="CSS,Database,Rails,Ruby,Sass,Typography,Varnish,Vim,HTML,Git,JavaScript,Performance">
   
 
   
 
   <!-- Custom CSS -->
-  <link rel="stylesheet" href="/assets/app-84101f80b16f11b09b254d4de1fa98e3.css">
+  <link rel="stylesheet" href="/assets/app-135e73aca9e0611311efcb9af8e2e5f3.css">
 </head>
 
 
